src/main/java/playgroundGrammarParser.java
// Generated from /Users/irony/IdeaProjects/playground/src/main/playgroundGrammar.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class playgroundGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		IDENTIFIER=32, DECIMAL_LITERAL=33, STRING_LITERAL=34, CHARACTER_LITERAL=35, 
		WS=36, ADD=37, SUB=38, MUL=39, DIV=40, MOD=41, EXP=42, GT=43, LT=44, GEQ=45, 
		LEQ=46, EQ=47, NEQ=48, MULEQ=49, DIVEQ=50, MODEQ=51, ADDEQ=52, SUBEQ=53, 
		AND=54, OR=55, NOT=56, UNTIL=57, THROUGH=58, ARROW=59;
	public static final int
		RULE_top_level = 0, RULE_literal = 1, RULE_numeric_literal = 2, RULE_char_sequence_literal = 3, 
		RULE_integer_literal = 4, RULE_double_literal = 5, RULE_expression = 6, 
		RULE_assignment_expression = 7, RULE_literal_expression = 8, RULE_member_expression = 9, 
		RULE_variable_expression = 10, RULE_function_call_expression = 11, RULE_call_argument_clause = 12, 
		RULE_call_argument = 13, RULE_boolean_literal = 14, RULE_statement = 15, 
		RULE_statements = 16, RULE_loop_statement = 17, RULE_for_in_statement = 18, 
		RULE_while_statement = 19, RULE_repeat_while_statement = 20, RULE_branch_statement = 21, 
		RULE_if_statement = 22, RULE_else_clause = 23, RULE_control_transfer_statement = 24, 
		RULE_break_statement = 25, RULE_continue_statement = 26, RULE_return_statement = 27, 
		RULE_declaration = 28, RULE_code_block = 29, RULE_constant_declaration = 30, 
		RULE_variable_declaration = 31, RULE_function_declaration = 32, RULE_function_name = 33, 
		RULE_function_signature = 34, RULE_function_result_type = 35, RULE_function_body = 36, 
		RULE_parameter_clause = 37, RULE_parameter_list = 38, RULE_parameter = 39, 
		RULE_param_name = 40, RULE_type_annotation = 41, RULE_type = 42, RULE_pattern = 43, 
		RULE_wildcard_pattern = 44, RULE_identifier_pattern = 45;
	private static String[] makeRuleNames() {
		return new String[] {
			"top_level", "literal", "numeric_literal", "char_sequence_literal", "integer_literal", 
			"double_literal", "expression", "assignment_expression", "literal_expression", 
			"member_expression", "variable_expression", "function_call_expression", 
			"call_argument_clause", "call_argument", "boolean_literal", "statement", 
			"statements", "loop_statement", "for_in_statement", "while_statement", 
			"repeat_while_statement", "branch_statement", "if_statement", "else_clause", 
			"control_transfer_statement", "break_statement", "continue_statement", 
			"return_statement", "declaration", "code_block", "constant_declaration", 
			"variable_declaration", "function_declaration", "function_name", "function_signature", 
			"function_result_type", "function_body", "parameter_clause", "parameter_list", 
			"parameter", "param_name", "type_annotation", "type", "pattern", "wildcard_pattern", 
			"identifier_pattern"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'('", "')'", "'='", "'()'", "','", "'true'", "'false'", 
			"';'", "'for'", "'in'", "'while'", "'repeat'", "'if'", "'else'", "'break'", 
			"'continue'", "'return'", "'{'", "'}'", "'let'", "'var'", "'func'", "':'", 
			"'Int'", "'Bool'", "'Double'", "'Character'", "'String'", "'Void'", "'_'", 
			null, null, null, null, null, "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", 
			"'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'*='", "'/='", "'%='", 
			"'+='", "'-='", "'&&'", "'||'", "'!'", "'..<'", "'...'", "'->'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "IDENTIFIER", "DECIMAL_LITERAL", 
			"STRING_LITERAL", "CHARACTER_LITERAL", "WS", "ADD", "SUB", "MUL", "DIV", 
			"MOD", "EXP", "GT", "LT", "GEQ", "LEQ", "EQ", "NEQ", "MULEQ", "DIVEQ", 
			"MODEQ", "ADDEQ", "SUBEQ", "AND", "OR", "NOT", "UNTIL", "THROUGH", "ARROW"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "playgroundGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public playgroundGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Top_levelContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(playgroundGrammarParser.EOF, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public Top_levelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_top_level; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).enterTop_level(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).exitTop_level(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof playgroundGrammarVisitor ) return ((playgroundGrammarVisitor<? extends T>)visitor).visitTop_level(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Top_levelContext top_level() throws RecognitionException {
		Top_levelContext _localctx = new Top_levelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_top_level);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__30) | (1L << IDENTIFIER) | (1L << DECIMAL_LITERAL) | (1L << STRING_LITERAL) | (1L << CHARACTER_LITERAL) | (1L << SUB) | (1L << NOT))) != 0)) {
				{
				setState(92);
				statements();
				}
			}

			setState(95);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public Numeric_literalContext numeric_literal() {
			return getRuleContext(Numeric_literalContext.class,0);
		}
		public Boolean_literalContext boolean_literal() {
			return getRuleContext(Boolean_literalContext.class,0);
		}
		public Char_sequence_literalContext char_sequence_literal() {
			return getRuleContext(Char_sequence_literalContext.class,0);
		}
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).exitLiteral(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof playgroundGrammarVisitor ) return ((playgroundGrammarVisitor<? extends T>)visitor).visitLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_literal);
		try {
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case DECIMAL_LITERAL:
			case SUB:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				numeric_literal();
				}
				break;
			case T__6:
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				boolean_literal();
				}
				break;
			case STRING_LITERAL:
			case CHARACTER_LITERAL:
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				char_sequence_literal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Numeric_literalContext extends ParserRuleContext {
		public Integer_literalContext integer_literal() {
			return getRuleContext(Integer_literalContext.class,0);
		}
		public Double_literalContext double_literal() {
			return getRuleContext(Double_literalContext.class,0);
		}
		public TerminalNode SUB() { return getToken(playgroundGrammarParser.SUB, 0); }
		public Numeric_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numeric_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).enterNumeric_literal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).exitNumeric_literal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof playgroundGrammarVisitor ) return ((playgroundGrammarVisitor<? extends T>)visitor).visitNumeric_literal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Numeric_literalContext numeric_literal() throws RecognitionException {
		Numeric_literalContext _localctx = new Numeric_literalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_numeric_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SUB) {
				{
				setState(102);
				match(SUB);
				}
			}

			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(105);
				integer_literal();
				}
				break;
			case 2:
				{
				setState(106);
				double_literal();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Char_sequence_literalContext extends ParserRuleContext {
		public TerminalNode STRING_LITERAL() { return getToken(playgroundGrammarParser.STRING_LITERAL, 0); }
		public TerminalNode CHARACTER_LITERAL() { return getToken(playgroundGrammarParser.CHARACTER_LITERAL, 0); }
		public Char_sequence_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_char_sequence_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).enterChar_sequence_literal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).exitChar_sequence_literal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof playgroundGrammarVisitor ) return ((playgroundGrammarVisitor<? extends T>)visitor).visitChar_sequence_literal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Char_sequence_literalContext char_sequence_literal() throws RecognitionException {
		Char_sequence_literalContext _localctx = new Char_sequence_literalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_char_sequence_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_la = _input.LA(1);
			if ( !(_la==STRING_LITERAL || _la==CHARACTER_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Integer_literalContext extends ParserRuleContext {
		public TerminalNode DECIMAL_LITERAL() { return getToken(playgroundGrammarParser.DECIMAL_LITERAL, 0); }
		public Integer_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integer_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).enterInteger_literal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).exitInteger_literal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof playgroundGrammarVisitor ) return ((playgroundGrammarVisitor<? extends T>)visitor).visitInteger_literal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Integer_literalContext integer_literal() throws RecognitionException {
		Integer_literalContext _localctx = new Integer_literalContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_integer_literal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(DECIMAL_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Double_literalContext extends ParserRuleContext {
		public List<TerminalNode> DECIMAL_LITERAL() { return getTokens(playgroundGrammarParser.DECIMAL_LITERAL); }
		public TerminalNode DECIMAL_LITERAL(int i) {
			return getToken(playgroundGrammarParser.DECIMAL_LITERAL, i);
		}
		public Double_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_double_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).enterDouble_literal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).exitDouble_literal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof playgroundGrammarVisitor ) return ((playgroundGrammarVisitor<? extends T>)visitor).visitDouble_literal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Double_literalContext double_literal() throws RecognitionException {
		Double_literalContext _localctx = new Double_literalContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_double_literal);
		int _la;
		try {
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				match(DECIMAL_LITERAL);
				setState(114);
				match(T__0);
				setState(116);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(115);
					match(DECIMAL_LITERAL);
					}
					break;
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==DECIMAL_LITERAL) {
					{
					setState(118);
					match(DECIMAL_LITERAL);
					}
				}

				setState(121);
				match(T__0);
				setState(122);
				match(DECIMAL_LITERAL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssignmentExprContext extends ExpressionContext {
		public Assignment_expressionContext assignment_expression() {
			return getRuleContext(Assignment_expressionContext.class,0);
		}
		public AssignmentExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).enterAssignmentExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).exitAssignmentExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof playgroundGrammarVisitor ) return ((playgroundGrammarVisitor<? extends T>)visitor).visitAssignmentExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BoolComparativeExprContext extends ExpressionContext {
		public Token op;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode EQ() { return getToken(playgroundGrammarParser.EQ, 0); }
		public TerminalNode NEQ() { return getToken(playgroundGrammarParser.NEQ, 0); }
		public BoolComparativeExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).enterBoolComparativeExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).exitBoolComparativeExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof playgroundGrammarVisitor ) return ((playgroundGrammarVisitor<? extends T>)visitor).visitBoolComparativeExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExponentExprContext extends ExpressionContext {
		public Token op;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode EXP() { return getToken(playgroundGrammarParser.EXP, 0); }
		public ExponentExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).enterExponentExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).exitExponentExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof playgroundGrammarVisitor ) return ((playgroundGrammarVisitor<? extends T>)visitor).visitExponentExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AddSubExprContext extends ExpressionContext {
		public Token op;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode ADD() { return getToken(playgroundGrammarParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(playgroundGrammarParser.SUB, 0); }
		public AddSubExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).enterAddSubExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).exitAddSubExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof playgroundGrammarVisitor ) return ((playgroundGrammarVisitor<? extends T>)visitor).visitAddSubExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AriAssignmentExprContext extends ExpressionContext {
		public Token op;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode MULEQ() { return getToken(playgroundGrammarParser.MULEQ, 0); }
		public TerminalNode DIVEQ() { return getToken(playgroundGrammarParser.DIVEQ, 0); }
		public TerminalNode MODEQ() { return getToken(playgroundGrammarParser.MODEQ, 0); }
		public TerminalNode ADDEQ() { return getToken(playgroundGrammarParser.ADDEQ, 0); }
		public TerminalNode SUBEQ() { return getToken(playgroundGrammarParser.SUBEQ, 0); }
		public AriAssignmentExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).enterAriAssignmentExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).exitAriAssignmentExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof playgroundGrammarVisitor ) return ((playgroundGrammarVisitor<? extends T>)visitor).visitAriAssignmentExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Function_callContext extends ExpressionContext {
		public Function_call_expressionContext function_call_expression() {
			return getRuleContext(Function_call_expressionContext.class,0);
		}
		public Function_callContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).enterFunction_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).exitFunction_call(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof playgroundGrammarVisitor ) return ((playgroundGrammarVisitor<? extends T>)visitor).visitFunction_call(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MemberExprContext extends ExpressionContext {
		public Member_expressionContext member_expression() {
			return getRuleContext(Member_expressionContext.class,0);
		}
		public MemberExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).enterMemberExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).exitMemberExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof playgroundGrammarVisitor ) return ((playgroundGrammarVisitor<? extends T>)visitor).visitMemberExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AriComparativeExprContext extends ExpressionContext {
		public Token op;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode GT() { return getToken(playgroundGrammarParser.GT, 0); }
		public TerminalNode LT() { return getToken(playgroundGrammarParser.LT, 0); }
		public TerminalNode GEQ() { return getToken(playgroundGrammarParser.GEQ, 0); }
		public TerminalNode LEQ() { return getToken(playgroundGrammarParser.LEQ, 0); }
		public AriComparativeExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).enterAriComparativeExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).exitAriComparativeExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof playgroundGrammarVisitor ) return ((playgroundGrammarVisitor<? extends T>)visitor).visitAriComparativeExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LiteralValueExprContext extends ExpressionContext {
		public Literal_expressionContext literal_expression() {
			return getRuleContext(Literal_expressionContext.class,0);
		}
		public LiteralValueExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).enterLiteralValueExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof playgroundGrammarListener ) ((playgroundGrammarListener)listener).exitLiteralValueExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof playgroundGrammarVisitor ) return ((playgroundGrammarVisitor<? extends T>)visitor).visitLiteralValueExpr(this);
